Why Datacraft alignment fix

--- a/resources/public/css/datacraft.webflow.css
+++ b/resources/public/css/datacraft.webflow.css
@@ -148,7 +148,7 @@ td {
 }
 
 .blank_row{
-  height: 15px
+  height: 20px
 }
 
 .nav {
